--- a/themes/myTheme/layouts/partials/navTree.html
+++ b/themes/myTheme/layouts/partials/navTree.html
@@ -1,31 +1,20 @@
-{{ define "navTree" }}
-    {{ $section := .section }}
-    {{ $current := .current }}
+{{/*  Fetch depth of current page  */}}
+{{ $hierarchy := partial "function/fetchHierarchy" . }}
 
-    <ul>
-        {{ range $section.RegularPages }}
-            <a href="{{ .RelPermalink }}">
-                {{ if eq . $current }}
-                    <li class="current">
-                        {{ .LinkTitle }}
-                    </li>
-                {{ else }}
-                    <li>
-                        {{ .LinkTitle }}
-                    </li>
-                {{ end }}
-            </a>
-        {{ end }}
+{{/*  Navigation Tree  */}}
+<nav class="navTree">
 
-        {{ range $section.Sections }}
-            <div class="section">
-                {{ if .IsAncestor $current }}
-                    <li onclick="func1(this)">{{ .LinkTitle }}</li>
-                {{ else }}
-                    <li class="closed" onclick="func1(this)">{{ .LinkTitle }}</li>
-                {{ end }}
-                {{ template "navTree" (dict "section" . "current" $current) }}
-            </div>
+    {{/*  Link to the top level category of current page  */}}
+    <a href="{{ (index $hierarchy 1).RelPermalink }}">
+
+        {{/*  If current page is top level category, add class "current"  */}}
+        {{ $class := "" }}
+        {{ if eq .RelPermalink (index $hierarchy 1).RelPermalink }}
+            {{ $class = "current" }}
         {{ end }}
-    </ul>
-{{ end }}
+        <h3 class="{{ $class }}">{{ (index $hierarchy 1).Title }}</h3>
+    </a>
+
+    {{/*  <ul> navigation tree comes here  */}}
+    {{ template "treeGenerator" (dict "section" (index $hierarchy 1) "current" .) }}
+</nav>
