--- a/themes/myTheme/layouts/_default/taxonomy.html
+++ b/themes/myTheme/layouts/_default/taxonomy.html
@@ -1,5 +1,8 @@
 {{ define "main" }}
-    <div class="container">
+    <div class="taxonomy-container">
+        <ul class="tags-breadcrumb">
+            <a href="/tags/"><li>< すべてのタグ</li></a>
+        </ul>
         <h1 class="{{ .Title | lower }}">{{ .Title }}</h1>
         <ul class="terms">
             {{ range .RegularPages | sort }}
