--- a/assets/sass/article.scss
+++ b/assets/sass/article.scss
@@ -32,7 +32,7 @@
         }
 
         > h1 {
-            font-size: 38px;
+            font-size: 32px;
             padding: 20px 0 10px;
         }
 
@@ -98,7 +98,6 @@
                 }
 
                 .button {
-                    margin: 0 20px;
                     display: flex;
                     align-items: end;
 
@@ -212,7 +211,6 @@
                     padding: 12px 18px;
 
                     > ul {
-                        // margin: 20px 0;
                         list-style-type: none;
 
                         & > li > a {
@@ -503,6 +501,8 @@
     }
 }
 
+
+
 @media screen and (max-width: 999px) {
     .container {
         padding: 20px;
@@ -513,8 +513,12 @@
 
         .article-container {
             width: 100%;
-            padding: 0 32px;
+            padding: 0 20px;
             margin: 0;
+
+            > h1 {
+                font-size: 28px;
+            }
 
             .dates, .views-and-thanks {
                 display: none;
