Add minus button

--- a/themes/myTheme/layouts/partials/navTree.html
+++ b/themes/myTheme/layouts/partials/navTree.html
@@ -12,7 +12,7 @@
 
         {{/*  navTree button  */}}
         <label for="navTree-checkbox">
-            <i class="fa-solid fa-plus"></i>
+            <div class="navTree-button"></div>
         </label>
     </div>
 
