--- a/assets/sass/_markdown.scss
+++ b/assets/sass/_markdown.scss
@@ -1,13 +1,13 @@
-article {
-    margin: 34px 0;
+@import '_variables.scss';
 
+article {
     h1 {
         font-size: 36px;
         color: red;
         padding: 8px 12px;
         
         &::before {
-            content: "#DO NOT USE <h1> INSIDE ARTICLE# <!--";
+            content: "#<h1> AREN'T ALLOWED INSIDE ARTICLE# <!--";
         }
 
         &::after {
@@ -17,22 +17,33 @@ article {
 
     h2 {
         font-size: 28px;
-        margin: 40px 0 30px;
+        margin: 64px 0 20px;
+
+        &:first-child, & + h3 {
+            margin: 20px 0;
+        }
+
+        a {
+            color: $myColor;
+        }
     }
 
     h3 {
         font-size: 22px;
-        margin: 30px 0 20px;
+        margin: 56px 0 20px;
+
+        &:first-child {
+            margin: 20px 0;
+        }
     }
 
     h4 {
         font-size: 16px;
-        margin: 20px 0 10px;
+        margin: 20px 0;
     }
 
     p {
-        padding: 16px 0;
-        font-size: 16px;
+        margin: 20px 0;
 
         code {
             background-color: #eee;
@@ -47,17 +58,11 @@ article {
     a {
         color: #0066cc;
         font-weight: 600;
-        transition: 5s;
-
-        &:hover {
-            text-decoration: underline;
-            text-underline-offset: 3px;
-        }
     }
 
-    > ul, ol {
+    > ul, > ol {
         margin: 20px 0;
-        padding: 0 30px 0 10px;
+        padding: 0 30px 0 20px;
     }
 
     ul li, ol li {
@@ -67,19 +72,6 @@ article {
 
         ul, ol {
             margin: 0 0 0 16px;
-        }
-    }
-
-    > pre {
-        background-color: #eee;
-        border-radius: 10px;
-        padding: 20px;
-        margin: 10px 0;
-
-        code {
-            font-family: 'Roboto Mono', monospace;
-            padding: 0;
-            margin: 0;
         }
     }
 
@@ -116,34 +108,62 @@ article {
                 }
             }
         }
-    }
+    };
 
-    p:has(img) {
-        width: 60%;
-
+    p {
         img {
+            display: block;
+            border-radius: 12px;
             width: 100%;
         }
 
-        em {
+        img + strong, a:has(img) + strong {
+            font-size: 14px;
             display: block;
             text-align: center;
+            margin: 6px 0;
+        }
+    }
+
+    > pre {
+        background-color: #eee;
+        border-radius: 10px;
+        padding: 12px 18px;
+        margin: 20px 0;
+
+        code {
+            font-family: 'Roboto Mono', monospace;
+            font-size: 14px;
+            padding: 0;
+            margin: 0;
         }
     }
 
     blockquote {
-        border-left: solid 4px #ccc;
-        padding-left: 8px;
-        margin: 12px 0;
+        border-left: solid 4px #bbb;
+        padding: 14px 20px;
+        font-style: italic;
+        background-color: #f6f6f6;
 
-        p {
-            padding: 4px 0;
+        > p {
+            margin: 0;
+            font-weight: 500;
+            color: #777;
+
+            &:has(em) {
+                text-align: right;
+                font-size: 14px;
+            }
         }
     }
 
     table {
+        display: block;
         border-collapse: collapse;
         margin: 20px 0;
+        overflow: auto;
+        white-space: nowrap;
+        -webkit-overflow-scrolling: touch;
 
         thead {
             tr {
@@ -189,7 +209,11 @@ article {
         .accordion-body {
             display: none;
             background-color: #f8f8f8;
-            padding: 12px 18px;
+            padding: 6px 18px;
+
+            ul {
+                padding-left: 10px;
+            }
         }
         
         input {
@@ -205,6 +229,17 @@ article {
             font-size: 16px;
             content: "\f068";
             font-weight: 600;
+        }
+    }
+
+    .footnotes {
+        padding: 0 12px;
+        font-size: 14px;
+        color: #666;
+        border-top: solid 1px #ccc;
+
+        hr {
+            display: none;
         }
     }
 }
