--- a/assets/sass/_markdown.scss
+++ b/assets/sass/_markdown.scss
@@ -22,10 +22,6 @@ article {
         &:first-child, & + h3 {
             margin: 20px 0;
         }
-
-        a {
-            color: $myColor;
-        }
     }
 
     h3 {
@@ -240,6 +236,16 @@ article {
 
         hr {
             display: none;
+        }
+    }
+}
+
+@each $c in $category {
+    article.#{map-get($c, 'type')} {
+        h2 {
+            a {
+                color: map-get($c, 'color');
+            }
         }
     }
 }
