--- a/themes/myTheme/layouts/_default/single.html
+++ b/themes/myTheme/layouts/_default/single.html
@@ -1,4 +1,6 @@
 {{ define "main" }}
+    {{ $hierarchy := partial "function/fetchHierarchy" . }}
+
     <div class="navTree-article-container">
 
         {{/*  Navigation Tree  */}}
@@ -27,7 +29,7 @@
                 </div>  */}}
                 <ul class="tags">
                     {{ with .Params.tags }}
-                        {{ range . | sort }}
+                        {{ range . | append ((index $hierarchy 1).Title) | sort }}
                             <a href="/tags/{{ . | lower }}">
                                 <li class="{{ . | lower }}">{{ . }}</li>
                             </a>
@@ -87,7 +89,7 @@
                 </div>
             {{ end }}
 
-            <article>
+            <article class="{{ (index $hierarchy 1).Params.Color }}">
                 {{ .Content }}
             </article>
         </div>
